# cpp_template

./: .gitignore  CMakeLists.txt  conanfile.txt  init.sh
cmake/: ccache.cmake
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  lib.cpp  lib.h
src/test/: CMakeLists.txt  main.cpp  test.cpp
